--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,7 +1,7 @@
 //
+@import './../../node_modules/bootstrap/scss/bootstrap.scss';
 @import 'tooplate-style.scss';
 @import './css/bootstrap.min.css';
 @import './css/owl.carousel.min.css';
 @import './css/owl.theme.default.min.css';
 @import './css/unicons.css';
-
